Add blog section

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                                 aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="nav-link d-none d-lg-block" href="#">
+                            <a class="nav-link d-none d-lg-block" href="#testimonial">
                                 <button class="ask-request">اطلب استشارة</button>
                             </a>
                             <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                                 <ul class="navbar-nav text-center py-4">
-                                    <a class="navbar-brand d-block d-lg-none" href="#">
-                                        <img src="./imgs/logo.png" alt="">
+                                    <a class="navbar-brand d-block d-lg-none" href="index.html">
+                                        <img src="./imgs/logo.png" alt="logo">
                                     </a>
                                     <li class="nav-item">
                                         <a class="nav-link active" aria-current="page" href="index.html">الصفحة
@@ -104,12 +104,12 @@
                                         <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                                     </li>
                                     <li class=" nav-item">
-                                        <a class="nav-link" href="#">المدونة</a>
+                                        <a class="nav-link" href="blog.html">المدونة</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                                     </li>
-                                    <a class="nav-link d-block d-lg-none" href="#">
+                                    <a class="nav-link d-block d-lg-none" href="#testimonial">
                                         <button class="ask-request">اطلب استشارة</button>
                                     </a>
                                     <div class="text-center social-media-icons d-block d-md-none">
@@ -121,8 +121,8 @@
                                     </div>
                                 </ul>
                             </div>
-                            <a class="navbar-brand d-none d-lg-block" href="#">
-                                <img src="./imgs/logo.png" alt="">
+                            <a class="navbar-brand d-none d-lg-block" href="index.html">
+                                <img src="./imgs/logo.png" alt="logo">
                             </a>
                         </nav>
                         <div class="headerContent">
@@ -167,13 +167,13 @@
                                 aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="nav-link d-none d-lg-block" href="#">
+                            <a class="nav-link d-none d-lg-block" href="#testimonial">
                                 <button class="ask-request">اطلب استشارة</button>
                             </a>
                             <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                                 <ul class="navbar-nav text-center py-4">
-                                    <a class="navbar-brand d-block d-lg-none" href="#">
-                                        <img src="./imgs/logo.png" alt="">
+                                    <a class="navbar-brand d-block d-lg-none" href="index.html">
+                                        <img src="./imgs/logo.png" alt="logo">
                                     </a>
                                     <li class="nav-item">
                                         <a class="nav-link active" aria-current="page" href="index.html">الصفحة
@@ -214,12 +214,12 @@
                                         <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                                     </li>
                                     <li class=" nav-item">
-                                        <a class="nav-link" href="#">المدونة</a>
+                                        <a class="nav-link" href="blog.html">المدونة</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                                     </li>
-                                    <a class="nav-link d-block d-lg-none" href="#">
+                                    <a class="nav-link d-block d-lg-none" href="#testimonial">
                                         <button class="ask-request">اطلب استشارة</button>
                                     </a>
                                     <div class="text-center social-media-icons d-block d-md-none">
@@ -231,8 +231,8 @@
                                     </div>
                                 </ul>
                             </div>
-                            <a class="navbar-brand d-none d-lg-block" href="#">
-                                <img src="./imgs/logo.png" alt="">
+                            <a class="navbar-brand d-none d-lg-block" href="index.html">
+                                <img src="./imgs/logo.png" alt="logo">
                             </a>
                         </nav>
                         <div class="headerContent">
@@ -277,13 +277,13 @@
                                 aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="nav-link d-none d-lg-block" href="#">
+                            <a class="nav-link d-none d-lg-block" href="#testimonial">
                                 <button class="ask-request">اطلب استشارة</button>
                             </a>
                             <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                                 <ul class="navbar-nav text-center py-4">
-                                    <a class="navbar-brand d-block d-lg-none" href="#">
-                                        <img src="./imgs/logo.png" alt="">
+                                    <a class="navbar-brand d-block d-lg-none" href="index.html">
+                                        <img src="./imgs/logo.png" alt="logo">
                                     </a>
                                     <li class="nav-item">
                                         <a class="nav-link active" aria-current="page" href="index.html">الصفحة
@@ -324,12 +324,12 @@
                                         <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                                     </li>
                                     <li class=" nav-item">
-                                        <a class="nav-link" href="#">المدونة</a>
+                                        <a class="nav-link" href="blog.html">المدونة</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                                     </li>
-                                    <a class="nav-link d-block d-lg-none" href="#">
+                                    <a class="nav-link d-block d-lg-none" href="#testimonial">
                                         <button class="ask-request">اطلب استشارة</button>
                                     </a>
                                     <div class="text-center social-media-icons d-block d-md-none">
@@ -341,8 +341,8 @@
                                     </div>
                                 </ul>
                             </div>
-                            <a class="navbar-brand d-none d-lg-block" href="#">
-                                <img src="./imgs/logo.png" alt="">
+                            <a class="navbar-brand d-none d-lg-block" href="index.html">
+                                <img src="./imgs/logo.png" alt="logo">
                             </a>
                         </nav>
                         <div class="headerContent">
