--- a/financial consulting.html
+++ b/financial consulting.html
@@ -51,8 +51,8 @@
                 </a>
                 <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center py-4">
-                        <a class="navbar-brand d-block d-lg-none" href="#">
-                            <img src="./imgs/logo.png" alt="">
+                        <a class="navbar-brand d-block d-lg-none" href="index.html">
+                            <img src="./imgs/logo.png" alt="logo">
                         </a>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئسية</a>
@@ -85,7 +85,7 @@
                             <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link" href="#">المدونة</a>
+                            <a class="nav-link" href="blog.html">المدونة</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact-us.html">اتصل بنا</a>
@@ -101,8 +101,8 @@
                         </div>
                     </ul>
                 </div>
-                <a class="navbar-brand d-none d-lg-block" href="#">
-                    <img src="./imgs/logo.png" alt="">
+                <a class="navbar-brand d-none d-lg-block" href="index.html">
+                    <img src="./imgs/logo.png" alt="logo">
                 </a>
             </nav>
             <div class="headerContent">
