--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -46,13 +46,13 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="nav-link d-none d-lg-block" href="#">
+                <a class="nav-link d-none d-lg-block" href="index.html">
                     <button class="ask-request">اطلب استشارة</button>
                 </a>
                 <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center py-4">
-                        <a class="navbar-brand d-block d-lg-none" href="#">
-                            <img src="./imgs/logo.png" alt="">
+                        <a class="navbar-brand d-block d-lg-none" href="index.html">
+                            <img src="./imgs/logo.png" alt="logo">
                         </a>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئسية</a>
@@ -85,7 +85,7 @@
                             <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link" href="#">المدونة</a>
+                            <a class="nav-link" href="blog.html">المدونة</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact-us.html">اتصل بنا</a>
@@ -101,8 +101,8 @@
                         </div>
                     </ul>
                 </div>
-                <a class="navbar-brand d-none d-lg-block" href="#">
-                    <img src="./imgs/logo.png" alt="">
+                <a class="navbar-brand d-none d-lg-block" href="index.html">
+                    <img src="./imgs/logo.png" alt="logo">
                 </a>
             </nav>
             <div class="headerContent">
