minfied images to min size

--- a/advertising services.html
+++ b/advertising services.html
@@ -117,7 +117,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/legale-img-2.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
                 </figure>
                 <div class="w-100">
                     <h3>خدمات التصميم</h3>
@@ -246,7 +246,9 @@
                     </p>
                 </div>
             </div>
-            <button>اتصل بنا</button>
+            <a href="tel:+966023114564" class="call-us">
+                <span>اتصل بنا</span>
+            </a>
         </div>
     </section>
 
