--- a/financial consulting.html
+++ b/financial consulting.html
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <figure class="col-lg-6">
-                    <img src="imgs/skills.jpg" class="img-fluid" alt="img">
+                    <img src="imgs/skills.webp" class="img-fluid" alt="img">
                 </figure>
                 <div class="our-importent-content col-lg-6">
                     <h4>نهتم بتقديم حلول مبتكرة ومتكاملة</h4>
@@ -194,7 +194,9 @@
                     للاستشارات هنا لمساعدتك في
                     تحقيق أهدافك ونجاحك المستقبلي. اتصل بنا اليوم لمناقشة احتياجاتك وبدء رحلة التطوير والنمو معنا.
                 </p>
-                <button>اتصل بنا</button>
+                <a href="tel:+966023114564" class="call-us">
+                    <span>اتصل بنا</span>
+                </a>
             </div>
     </section>
 
