--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,7 @@
             <div class="main-block-gallery">
                 <div class="gallery-block">
                     <figure>
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
+                        <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
                     <div class="gallery-block-content">
                         <span>تصميم، تسويق، برمجة</span>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="gallery-block active">
                     <figure class="d-lg-none d-block">
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
+                        <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
                     <div class="gallery-block-content">
                         <span>تصميم، تسويق، برمجة</span>
@@ -148,12 +148,12 @@
                             الدورية.</p>
                     </div>
                     <figure class="d-lg-block d-none">
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
+                        <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
                 </div>
                 <div class="gallery-block">
                     <figure>
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
+                        <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
                     <div class="gallery-block-content">
                         <span>تصميم، تسويق، برمجة</span>
