--- a/human consulting.html
+++ b/human consulting.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/human-consulting-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -149,7 +149,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -161,7 +161,7 @@
                     </p>
                 </div>
                 <figure class="d-lg-block d-none">
-                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
@@ -208,7 +208,9 @@
                     البشرية.
                     احصل على خدمات استشارية متخصصة في إدارة الموارد البشرية الآن!
                 </p>
-                <button>اتصل بنا</button>
+                <a href="tel:+966023114564" class="call-us">
+                    <span>اتصل بنا</span>
+                </a>
             </div>
     </section>
 
