--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 </p>
                 <div class="video-container">
                     <a href="https://www.youtube.com/watch?v=3PkufGVNlu0" target="_blank" class="video photo">
-                        <img src="imgs/video-photo.png" class="img-fluid video-photo" />
+                        <img src="imgs/video-photo.webp" class="img-fluid video-photo" />
                         <img src="imgs/icons/play.svg" class="video-icon" alt="video icon">
                         <img src="imgs/right-top-video.png" class="right-top-video" alt="right top video">
                         <div class="left-bottom-layer"></div>
@@ -607,7 +607,7 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-2.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-2.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. ليلى بنت معيض</span>
                             <span class="job">مستشارة اقتصادية ومطورة أعمال</span>
@@ -623,7 +623,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. مصطفى حسن</span>
                             <span class="job">مستشار اقتصادي</span>
@@ -637,7 +637,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-2.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-2.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. فاطمة مطاوع</span>
                             <span class="job">مستشارة مالية وإدارية</span>
@@ -653,7 +653,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">د. عبد الله الحسيني</span>
                             <span class="job">مستشار ومراجع محاسبي</span>
@@ -667,7 +667,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-2.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-2.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. شادية المصري</span>
                             <span class="job"> مستشارة ومقيّمة معتمدة في إدارة الابتكار المؤسسي وتطبيقات
@@ -682,7 +682,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">د. أحمد الديب</span>
                             <span class="job">مستشار الموارد البشرية</span>
@@ -698,7 +698,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-3.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-3.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">المحامي فهد القحطاني</span>
                             <span class="job"> مستشار قانوني</span>
@@ -713,7 +713,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">المحامي أسامة جبر</span>
                             <span class="job">مستشار صياغة اللوائح والإجراءات والسياسات التنظيمية.</span>
@@ -727,7 +727,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-3.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-3.webp" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. عبد الرحمن سليمان</span>
                             <span class="job">مستشار ومحلل استثماري</span>
@@ -753,10 +753,10 @@
             <div class="row align-items-center gap-5">
                 <div class="col-md-6 col-12 h-100">
                     <div class="container-layer">
-                        <img src="imgs/planning.png">
-                        <img src="imgs/planning.png">
-                        <img src="imgs/planning.png">
-                        <img src="imgs/planning.png">
+                        <img src="imgs/planning.webp">
+                        <img src="imgs/planning.webp">
+                        <img src="imgs/planning.webp">
+                        <img src="imgs/planning.webp">
                     </div>
                 </div>
                 <div class="col-md-5 col-12">
@@ -774,7 +774,7 @@
             <div class="row gap-0">
                 <div class="col-lg-4 col-md-6 col-12 ">
                     <figure>
-                        <img src="imgs/portfolio/portfolio-1.png" alt="portfolio-1" class="img-fluid">
+                        <img src="imgs/portfolio/portfolio-1.webp" alt="portfolio-1" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
                             <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
@@ -783,7 +783,7 @@
                         </div>
                     </figure>
                     <figure>
-                        <img src="imgs/portfolio/portfolio-2.png" alt="portfolio-2" class="img-fluid">
+                        <img src="imgs/portfolio/portfolio-2.webp" alt="portfolio-2" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
                             <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
@@ -794,7 +794,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <figure>
-                        <img src="imgs/portfolio/portfolio-3.png" alt="portfolio-3" class="img-fluid">
+                        <img src="imgs/portfolio/portfolio-3.webp" alt="portfolio-3" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
                             <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
@@ -803,7 +803,7 @@
                         </div>
                     </figure>
                     <figure>
-                        <img src="imgs/portfolio/portfolio-4.png" alt="portfolio-4" class="img-fluid">
+                        <img src="imgs/portfolio/portfolio-4.webp" alt="portfolio-4" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
                             <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
@@ -814,7 +814,7 @@
                 </div>
                 <div class="col-lg-4 col-12">
                     <figure>
-                        <img src="imgs/portfolio/portfolio-5.png" alt="portfolio-5" class="img-fluid">
+                        <img src="imgs/portfolio/portfolio-5.webp" alt="portfolio-5" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
                             <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
@@ -830,39 +830,44 @@
     <section id="carousel">
         <div class="container">
             <h3>بكل فخر عملاء <span class="main-color">سلسلة</span></h3>
-            <div class="swiper mySwiper2">
+            <div class="swiper mySwiper2 row gap-5">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-1.png" class="img-fluid" alt="logo-1">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-1.webp" class="img-fluid" alt="logo-1">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-2.png" class="img-fluid" alt="logo-2">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-2.webp" class="img-fluid" alt="logo-2">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-3.png" class="img-fluid" alt="logo-3">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-3.webp" class="img-fluid" alt="logo-3">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-4.png" class="img-fluid" alt="logo-4">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-4.webp" class="img-fluid" alt="logo-4">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-5.png" class="img-fluid" alt="logo-5">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-5.webp" class="img-fluid" alt="logo-5">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-1.png" class="img-fluid" alt="logo-1">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-6.webp" class="img-fluid" alt="logo-1">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-2.png" class="img-fluid" alt="logo-2">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-7.webp" class="img-fluid" alt="logo-2">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-3.png" class="img-fluid" alt="logo-3">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-1.webp" class="img-fluid" alt="logo-1">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-4.png" class="img-fluid" alt="logo-4">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-2.webp" class="img-fluid" alt="logo-2">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="imgs/logos/logo-5.png" class="img-fluid" alt="logo-5">
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-3.webp" class="img-fluid" alt="logo-3">
+                    </div>
+                    <div class="swiper-slide slide">
+                        <img src="imgs/logos/logo-4.webp" class="img-fluid" alt="logo-4">
                     </div>
                 </div>
+                <div class="swiper-button-next nav-btn"></div>
+                <div class="swiper-button-prev nav-btn"></div>
             </div>
         </div>
     </section>
