--- a/marketing consulting.html
+++ b/marketing consulting.html
@@ -117,7 +117,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/human-consulting-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -136,7 +136,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -148,7 +148,7 @@
                     </p>
                 </div>
                 <figure class="d-lg-block d-none">
-                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/human-consulting-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -182,7 +182,9 @@
                     اليوم للحصول على
                     خدماتنا التسويقية والإبداعية وبدء رحلة النجاح الرقمي. 
                 </p>
-                <button>اتصل بنا</button>
+                <a href="tel:+966023114564" class="call-us">
+                    <span>اتصل بنا</span>
+                </a>
             </div>
     </section>
 
