--- a/legal advice.html
+++ b/legal advice.html
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>نقدم خدمات استشارية شاملة تشمل اختيار الشكل القانوني المناسب لشركتك، إعداد اللوائح الداخلية وعقود
@@ -145,7 +145,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-2.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -156,7 +156,7 @@
                     </p>
                 </div>
                 <figure class="d-none d-lg-block">
-                    <img src="imgs/legale-img-2.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
@@ -166,7 +166,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -183,7 +183,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-4.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-4.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -193,7 +193,7 @@
                     </p>
                 </div>
                 <figure class="d-lg-block d-none">
-                    <img src="imgs/legale-img-4.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-4.webp" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
