--- a/technical consulting.html
+++ b/technical consulting.html
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-2.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p>
@@ -161,7 +161,7 @@
                     </p>
                 </div>
                 <figure class="d-none d-lg-block">
-                    <img src="imgs/legale-img-2.png" class="img-fluid" alt="img">
+                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
@@ -261,7 +261,9 @@
                     البشرية.
                     احصل على خدمات استشارية متخصصة في إدارة الموارد البشرية الآن!
                 </p>
-                <button>اتصل بنا</button>
+                <a href="tel:+966023114564" class="call-us">
+                    <span>اتصل بنا</span>
+                </a>
             </div>
     </section>
 
