--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -119,7 +119,7 @@
                     والقانونية ودراسات الجدوى وتخطيط الأعمال والتسويق وتأهيل الموارد البشرية بتوجيهات من خبراء
                     محترفين. في سلسلة نلبي
                     احتياجات رواد الأعمال والقائمين على المشاريع في مختلف المجالات الصناعية والتجارية والتقنية.</p>
-                <img src="imgs/more-about-us.jpg" class="img-fluid avatar" alt="img">
+                <img src="imgs/more-about-us.webp" class="img-fluid avatar" alt="img">
             </div>
         </div>
     </section>
@@ -128,9 +128,9 @@
         <div class="container">
             <div class="more-about-us-block more-about-us-block-2">
                 <div class="imgs">
-                    <img src="imgs/Soft skills-rafiki 1.png" class="img-fluid one" alt="img">
-                    <img src="imgs/Soft skills-rafiki 2.png" class="img-fluid two" alt="img">
-                    <img src="imgs/Soft skills-rafiki 3.png" class="img-fluid three" alt="img">
+                    <img src="imgs/Soft skills-rafiki 1.webp" class="img-fluid one" alt="img">
+                    <img src="imgs/Soft skills-rafiki 2.webp" class="img-fluid two" alt="img">
+                    <img src="imgs/Soft skills-rafiki 3.webp" class="img-fluid three" alt="img">
                 </div>
                 <p>
                     انطلاقًا من مكتبنا في الرياض -المملكة العربية السعودية، نجسّر الفجوة بين الرؤية والواقع عبر سلسلة من
@@ -154,7 +154,7 @@
                     تخصصات مختلفة جعلت من
                     سلسلة الخيار الأول لمئات المشاريع التي طورناها على مدى سنوات عملنا.
                 </p>
-                <img src="imgs/Soft skills-rafiki.png" class="img-fluid avatar" alt="img">
+                <img src="imgs/Soft skills-rafiki.webp" class="img-fluid avatar" alt="img">
             </div>
         </div>
     </section>
