Make it responsive

--- a/blog.html
+++ b/blog.html
@@ -128,7 +128,7 @@
             </div>
             <div class="main-block">
                 <div class="block">
-                    <div class="top d-flex align-items-lg-end">
+                    <div class="top d-flex align-items-end">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-lg-end">
+                    <div class="top d-flex align-items-end">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-lg-end">
+                    <div class="top d-flex align-items-end">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-lg-end">
+                    <div class="top d-flex align-items-end">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
